Expose OBS repository stats via GetBlobStoreStats API (#688)
* Expose OBS repository stats via GetBlobStoreStats API

This PR enhances the GetBlobStoreStats API with aggregated stats of snapshot
repositories (operational backup service).

Relates: #562

A sample response is as the follows

```
{
 "_nodes": {
 "total": 2,
 "successful": 2,
 "failed": 0
 },
 "cluster_name": "runTask",
 "_all": {
 "object_store_stats": {
 "request_counts": {
 "ListObjects": 20,
 "PutMultipartObject": 20,
 "DeleteObjects": 20,
 "AbortMultipartObject": 20,
 "PutObject": 20,
 "GetObject": 20
 }
 },
 "operational_backup_service_stats": {
 "request_counts": {
 "ListObjects": 42,
 "PutMultipartObject": 42,
 "DeleteObjects": 42,
 "AbortMultipartObject": 42,
 "PutObject": 42,
 "GetObject": 42
 }
 }
 },
 "nodes": {
 "PaIdh023RvS0J99uWF_A7Q": {
 "object_store_stats": {
 "request_counts": {
 "ListObjects": 10,
 "PutMultipartObject": 10,
 "DeleteObjects": 10,
 "AbortMultipartObject": 10,
 "PutObject": 10,
 "GetObject": 10
 }
 },
 "operational_backup_service_stats": {
 "request_counts": {
 "ListObjects": 22,
 "PutMultipartObject": 22,
 "DeleteObjects": 22,
 "AbortMultipartObject": 22,
 "PutObject": 22,
 "GetObject": 22
 }
 }
 },
 "4RKUvXhKTMOoslA9V_4EmA": {
 "object_store_stats": {
 "request_counts": {
 "ListObjects": 10,
 "PutMultipartObject": 10,
 "DeleteObjects": 10,
 "AbortMultipartObject": 10,
 "PutObject": 10,
 "GetObject": 10
 }
 },
 "operational_backup_service_stats": {
 "request_counts": {
 "ListObjects": 20,
 "PutMultipartObject": 20,
 "DeleteObjects": 20,
 "AbortMultipartObject": 20,
 "PutObject": 20,
 "GetObject": 20
 }
 }
 }
 }
}
```